  patterns instead.
- Added an OpenLineSegment pattern/constructor
- The corners and sides functions in Box now return specific types
  representing those rather than four tuples.
- Added a BezierSpline module and data type (Thanks to Maarten).
- Added a QuadTree implementation. It can be built from a set of
  points, and to represent the zeroset of some function.

** 0.10

- renamed the smallest enclosing ball to RIC
- improved tangency finding on convex hulls/chains
- changes to how we order points in ccwCmpAround and cwCmpAround;
  these will report EQ if points appear at the same angle from the
  center point.
- new functions ccwCmpAroundWith and cwCmpAroundWith that allow you to
  specify the direction corresponding to "zero".
- bugfixes, in particular triangulating a polygon with holes now works properly.
- removed some unused dependencies
- we are no longer depending on ghc-plugins; as a result hgeometry
  now also compiles with ghcjs
- more ToJSON/FromJSON instances.
- removed the 'point2' and 'point3' functions in favor of the pattern
  synonyms Point2 and Point3.

** 0.9

- Implemented 2D Linear Programming using randomized incremental
  construction (in \(O(n)\) expected time). This allows us to solve
  the following problems
  - testing starshapedness of simple polygons in expected linear time
  - testing if we can separate a set of red and a set of blue points
    in expected linear time.
- Data types for halfspaces

** 0.8

- Compatibility with GHC 8.6
- Added \(O(n\log n)\) time closest pair algorithm.
- Added arrangement data type
- Various Bugfixes
- Added Camera data type with some world to screen transformations.
- Additional read/show instances
- Updated some of the show instances for Ipe related types.

** 0.7


- Compatibility with GHC 8.0-8.4
- Implemented more Algorithms and Data Structures. This includes
  * Polygon triangulation
- A new implementation of PlanarSubdivision that now also supports disconnected
  subdivsions.