@@ -25,6 +25,9 @@
 - Added a BezierSpline module and data type (Thanks to Maarten).
 - Added a QuadTree implementation. It can be built from a set of
   points, and to represent the zeroset of some function.
+- Added a Naive implementation of Convex hull in R^3. Note however
+  that it works only for points in general position. In particular, no
+  four points should be coplanar.
 
 ** 0.10
 
